Updated background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ input {
 
 /* HEADER SECTION */
 #h {
-	background: url(../img/wallpaper.png) no-repeat center top;
+	background: url(../img/wallpaper.jpg) no-repeat center top;
 	padding-top: 80px;
 	text-align:center;
 	background-attachment: relative;
